<resources>
    <string name="app_name">Digital Bank</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Common -->
    <string name="text_name_empty">Digite seu nome</string>
    <string name="text_email_empty">Digite seu e-mail</string>
    <string name="text_phone_empty">Digite seu telefone</string>
    <string name="text_password_empty">Digite sua senha</string>
    <string name="error_generic">Ocorreu um erro, por favor tente novamente mais tarde.</string>

    <!-- BottomSheet Dialog -->
    <string name="text_title_bottom_sheet">Atencao</string>
    <string name="text_button_bottom_sheet">Entendi</string>

    <!-- register screen -->
    <string name="label_name">Name</string>
    <string name="label_email">Email</string>
    <string name="label_phone">Phone</string>
    <string name="label_password">Password</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="btn_register">Register</string>

    <!-- login screen -->
    <string name="create_account">Create account</string>
    <string name="forgot_password">Forgot password</string>
    <string name="btn_login">Login</string>

    <!-- Profile screen -->
    <string name="text_message_camera_denied_profile_fragment">Para que você capture imagens utilizando a câmera precisamos desta permissão. Acesse as configurações e habilite esta opção.</string>
    <string name="text_message_gallery_denied_profile_fragment">Para que você carregue imagens utilizando a galeria precisamos desta permissão. Acesse as configurações e habilite esta opção.</string>
    <string name="text_title_bottom_sheet_profile">Adicionar imagem de perfil</string>
    <string name="text_message_bottom_sheet_profile">Escolha uma das opcoes abaixo para adicionar \numa imagem de perfil</string>
    <string name="text_button_camera_bottom_sheet_profile">Camera</string>
    <string name="text_button_gallery_bottom_sheet_profile">Galeria</string>

    <!-- forgot password screen -->
    <string name="btn_send_email">Send email</string>
    <string name="forgot_password_message">Input your email to receive a link to forgot your password.</string>

    <!-- home screen -->
    <string name="text_last_activities">Last Activities</string>
    <string name="text_see_all">See All</string>

    <string name="card_text_deposit">Depositar</string>
    <string name="card_text_cellphone_recharge">Recarga</string>
    <string name="card_text_history">Historico</string>
    <string name="card_text_transfer">Transferir</string>
    <string name="card_text_receive">Receber</string>
    <string name="card_text_my_account">Minha conta</string>
    <string name="card_text_sign_out">Sair</string>
    <string name="notification_icon">Notification icon</string>

    <string name="text_formatted_value">R$ %1$s</string>

    <!--    Erros Firebase Authentication-->
    <string name="account_not_registered_register_fragment">Nenhuma conta encontrada com este e-mail.</string>
    <string name="invalid_email_register_fragment">Insira um e-mail válido.</string>
    <string name="invalid_password_register_fragment">Senha inválida, tente novamente.</string>
    <string name="email_in_use_register_fragment">Este e-mail já está em uso.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>
</resources>