<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".MainActivity">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarThumbHorizontal="@null"
        android:layout_marginBottom="@dimen/margin_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginVertical="@dimen/padding_medium"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/card_corner_radius">

                <ImageView
                    android:layout_width="@dimen/card_icon_size"
                    android:layout_height="@dimen/card_icon_size"
                    android:layout_margin="@dimen/margin_medium"
                    android:src="@drawable/ic_deposit" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="@dimen/margin_medium"
                    android:text="@string/card_text_deposit"
                    android:textColor="@color/black"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginVertical="@dimen/padding_medium"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/card_corner_radius">

                <ImageView
                    android:layout_width="@dimen/card_icon_size"
                    android:layout_height="@dimen/card_icon_size"
                    android:layout_margin="@dimen/margin_medium"
                    android:src="@drawable/ic_cellphone_recharge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="@dimen/margin_medium"
                    android:text="@string/card_text_cellphone_recharge"
                    android:textColor="@color/black"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginVertical="@dimen/padding_medium"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/card_corner_radius">

                <ImageView
                    android:layout_width="@dimen/card_icon_size"
                    android:layout_height="@dimen/card_icon_size"
                    android:layout_margin="@dimen/margin_medium"
                    android:src="@drawable/ic_history" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="@dimen/margin_medium"
                    android:text="@string/card_text_history"
                    android:textColor="@color/black"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginVertical="@dimen/padding_medium"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/card_corner_radius">

                <ImageView
                    android:layout_width="@dimen/card_icon_size"
                    android:layout_height="@dimen/card_icon_size"
                    android:layout_margin="@dimen/margin_medium"
                    android:src="@drawable/ic_transfer" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="@dimen/margin_medium"
                    android:text="@string/card_text_transfer"
                    android:textColor="@color/black"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginVertical="@dimen/padding_medium"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/card_corner_radius">

                <ImageView
                    android:layout_width="@dimen/card_icon_size"
                    android:layout_height="@dimen/card_icon_size"
                    android:layout_margin="@dimen/margin_medium"
                    android:src="@drawable/ic_receive" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="@dimen/margin_medium"
                    android:text="@string/card_text_receive"
                    android:textColor="@color/black"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginVertical="@dimen/padding_medium"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/card_corner_radius">

                <ImageView
                    android:layout_width="@dimen/card_icon_size"
                    android:layout_height="@dimen/card_icon_size"
                    android:layout_margin="@dimen/margin_medium"
                    android:src="@drawable/ic_user_black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="@dimen/margin_medium"
                    android:text="@string/card_text_my_account"
                    android:textColor="@color/black"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="@dimen/margin_large"
                android:layout_marginVertical="@dimen/padding_medium"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/card_corner_radius">

                <ImageView
                    android:layout_width="@dimen/card_icon_size"
                    android:layout_height="@dimen/card_icon_size"
                    android:layout_margin="@dimen/margin_medium"
                    android:src="@drawable/ic_signout" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="@dimen/margin_medium"
                    android:text="@string/card_text_sign_out"
                    android:textColor="@color/black"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>