<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_500"
    android:padding="@dimen/padding_largest"
    tools:context=".presenter.home.HomeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:src="@drawable/guilherme" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="Meu saldo"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/tv_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="R$ 500,00" />

    <TextView
        android:id="@+id/tv_my_transactions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="Ultimas transacoes"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/tv_balance"
        app:layout_constraintTop_toBottomOf="@+id/tv_balance" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="Ver todos"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_balance" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/notification_icon"
        android:padding="@dimen/padding_largest"
        android:src="@drawable/ic_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/margin_large"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_my_transactions">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            tools:listitem="@layout/last_transaction_item"
            android:layout_height="match_parent" />

    </androidx.cardview.widget.CardView>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_large"
        android:scrollbarThumbHorizontal="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginVertical="@dimen/padding_medium"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/card_corner_radius">

                <ImageView
                    android:layout_width="@dimen/card_icon_size"
                    android:layout_height="@dimen/card_icon_size"
                    android:layout_margin="@dimen/margin_medium"
                    android:src="@drawable/ic_deposit" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="@dimen/margin_medium"
                    android:text="@string/card_text_deposit"
                    android:textColor="@color/black" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginVertical="@dimen/padding_medium"
                android:layout_marginStart="@dimen/margin_medium"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/card_corner_radius">

                <ImageView
                    android:layout_width="@dimen/card_icon_size"
                    android:layout_height="@dimen/card_icon_size"
                    android:layout_margin="@dimen/margin_medium"
                    android:src="@drawable/ic_cellphone_recharge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="@dimen/margin_medium"
                    android:text="@string/card_text_cellphone_recharge"
                    android:textColor="@color/black" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginVertical="@dimen/padding_medium"
                android:layout_marginStart="@dimen/margin_medium"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/card_corner_radius">

                <ImageView
                    android:layout_width="@dimen/card_icon_size"
                    android:layout_height="@dimen/card_icon_size"
                    android:layout_margin="@dimen/margin_medium"
                    android:src="@drawable/ic_history" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="@dimen/margin_medium"
                    android:text="@string/card_text_history"
                    android:textColor="@color/black" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginVertical="@dimen/padding_medium"
                android:layout_marginStart="@dimen/margin_medium"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/card_corner_radius">

                <ImageView
                    android:layout_width="@dimen/card_icon_size"
                    android:layout_height="@dimen/card_icon_size"
                    android:layout_margin="@dimen/margin_medium"
                    android:src="@drawable/ic_transfer" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="@dimen/margin_medium"
                    android:text="@string/card_text_transfer"
                    android:textColor="@color/black" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginVertical="@dimen/padding_medium"
                android:layout_marginStart="@dimen/margin_medium"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/card_corner_radius">

                <ImageView
                    android:layout_width="@dimen/card_icon_size"
                    android:layout_height="@dimen/card_icon_size"
                    android:layout_margin="@dimen/margin_medium"
                    android:src="@drawable/ic_receive" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="@dimen/margin_medium"
                    android:text="@string/card_text_receive"
                    android:textColor="@color/black" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginVertical="@dimen/padding_medium"
                android:layout_marginStart="@dimen/margin_medium"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/card_corner_radius">

                <ImageView
                    android:layout_width="@dimen/card_icon_size"
                    android:layout_height="@dimen/card_icon_size"
                    android:layout_margin="@dimen/margin_medium"
                    android:src="@drawable/ic_user_black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="@dimen/margin_medium"
                    android:text="@string/card_text_my_account"
                    android:textColor="@color/black" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginVertical="@dimen/padding_medium"
                android:layout_marginStart="@dimen/margin_medium"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/card_corner_radius">

                <ImageView
                    android:layout_width="@dimen/card_icon_size"
                    android:layout_height="@dimen/card_icon_size"
                    android:layout_margin="@dimen/margin_medium"
                    android:src="@drawable/ic_signout" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="@dimen/margin_medium"
                    android:text="@string/card_text_sign_out"
                    android:textColor="@color/black" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>